# sm-wsclient

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml
.github/workflows/: main.yml
cmake/: hl2sdk.cmake  sourcemod.cmake
src/: extension.cpp  extension.h  smsdk_config.h  websockets_natives.cpp  websockets_session.hpp
vcpkg/: vcpkg_x86-linux-static.txt  vcpkg_x86-linux.txt  vcpkg_x86-windows-static.txt
